<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/sp_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/popcorn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/register_and_be_a_part_of_popcorn"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custome_input_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <EditText
            android:id="@+id/reg_txt_email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sp_lightgrey"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/sp_lightgrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_txt_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sp_lightgrey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/sp_lightgrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_txt_email" />

        <EditText
            android:id="@+id/reg_txt_password2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sp_lightgrey"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/sp_lightgrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_txt_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_btn_register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custome_input_box_fill"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_btn_back"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custome_input_box"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reg_btn_register"
        app:layout_constraintStart_toStartOf="@+id/reg_btn_register"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn_register" />




</androidx.constraintlayout.widget.ConstraintLayout>