<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/sp_grey">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/pop_corn_512"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custome_input_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <EditText
            android:id="@+id/login_txt_email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sp_lightgrey"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/sp_lightgrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_txt_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/sp_lightgrey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/sp_lightgrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_txt_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custome_input_box_fill"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_btn_google_Login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custome_input_box_white"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/google_symbol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sign_in_with_google"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custome_input_box"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_google_Login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_google_Login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_google_Login" />




</androidx.constraintlayout.widget.ConstraintLayout>